--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "atma-io-middleware-condcomments",
-    "version": "1.1.26",
+    "version": "1.1.27",
     "description": "Conditional comments middleware for Atma.IO and Atma.Toolkit",
     "author": {
         "name": "Alex Kit",
@@ -9,9 +9,11 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "build": "app-bundler"
+        "build": "app-bundler",
+        "watch": "app-bundler --watch"
     },
     "dependencies": {
+        "appcfg": "^0.2.47",
         "atma-io-middleware-base": "^1.0.10"
     },
     "devDependencies": {
