--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "license": "MIT",
     "scripts": {
         "build": "app-bundler",
-        "watch": "app-bundler --watch"
+        "watch": "app-bundler --watch",
+        "test": "atma test"
     },
     "dependencies": {
-        "appcfg": "^0.2.47",
-        "atma-io-middleware-base": "^1.0.37"
+        "atma": "^0.15.24",
+        "atma-io-middleware-base": "^1.0.51"
     },
     "devDependencies": {
         "@types/node": "^8.0.34",
-        "app-bundler": "0.0.35",
-        "atma-io": "^1.1.7",
-        "atma-loader-ts": "^1.0.0"
+        "app-bundler": "^0.2.17",
+        "atma-io": "^1.3.7",
+        "atma-loader-ts": "^1.2.7"
     },
     "app-bundler": {
         "file": "src/index.ts",
@@ -50,23 +51,19 @@
         "settings": {
             "include": {
                 "amd": true,
-                "extentionDefault": {
+                "extensionDefault": {
                     "js": "ts"
                 }
             },
             "atma-loader-ts": {
-              "extensions": [
-                "ts",
-                "test"
-              ],
-              "typescript": {
-                "compilerOptions": {
-                  "target": "es6",
-                "module": "AMD",
-                  "sourceMap": false
+                "typescript": {
+                    "compilerOptions": {
+                        "target": "es6",
+                        "module": "AMD",
+                        "sourceMap": false
+                    }
                 }
-              }
             }
-          }
+        }
     }
 }
