--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,36 +2,25 @@
 version: 2.1
 
 orbs:
-  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/browser-tools
-  browser-tools: circleci/browser-tools@1.4.8
-
+  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
+  node: circleci/node@7.1.0
 
 jobs:
   build-and-test:
     # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
     # https://circleci.com/developer/images/image/cimg/node
     docker:
-      - image: cimg/node:20.4.0-browsers
+      - image: cimg/node:24.0
     steps:
-      - browser-tools/install-firefox
       - checkout
+      - node/install-packages:
+          pkg-manager: npm
       - run:
-          name: NPM Install
-          command: npm install --force
-      - run:
-          name: Build Project
+          name: Build project
           command: npm run build
       - run:
-          name: Launch Server
-          command: npm run server
-          background: true
-      - run:
-          name: Launch Web
-          command: sleep 10 && firefox "http://127.0.0.1:5777/utest/"
-          background: true
-      - run:
           name: Run tests
-          command: sleep 15 && npm run test
+          command: npm run test
 
 workflows:
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
